@@ -4,6 +4,10 @@ Changelog
 2.0b2 (Unreleased)
 ------------------
 
+- Add a moderator_email setting to control where moderator notifications are
+  sent.
+  [davisagli]
+
 2.0b1 (2011-04-06)
 ------------------
 
